# LabaOS1Remake

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/creator/: creator.cpp
apps/main/: main.cpp
apps/reporter/: reporter.cpp
libs/: CMakeLists.txt
libs/include/: fileUtils.h  process.h
libs/src/: employee.cpp  fileUtils.cpp  process.cpp
tests/: CMakeLists.txt  test_employee.cpp  test_fileutils.cpp  test_process.cpp
